--- a/about.qmd
+++ b/about.qmd
@@ -12,7 +12,10 @@ about:
       href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/mylbrinkerhoff
+    - icon: link
+      text: Website
+      href: https://mlbrinkerhoff.me
 
 ---
 
