--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Post With Code"
-author: "Harlow Malloc"
+# author: "Harlow Malloc"
 date: "2025-09-03"
 categories: [news, code, analysis]
 image: "image.jpg"
